fix: wrap the three columns div to show only 3 cards in a row

--- a/src/css/Views/Events.module.css
+++ b/src/css/Views/Events.module.css
@@ -21,11 +21,13 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
     background-color: beige;
     height: calc(100vh - 90px);
 }
 
-.title{
+.title {
     display: flex;
     width: 100%;
     justify-content: left;
@@ -34,7 +36,7 @@
     padding-bottom: 0px;
 }
 
-.column{
+.column {
     background-color: beige;
     width: 30%;
     padding: 10px;
